--- a/src/coming-soon.html
+++ b/src/coming-soon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Frontender is coming!</title>
+    <title>El Cornercito is coming!</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo&family=Gugi&family=Monda:wght@700&display=swap"
       rel="stylesheet"
@@ -68,7 +68,7 @@
           </form>
         </aside>
       </main>
-      <video autoplay muted loop class="video-background" poster="./img/fondo.jpg">
+      <video autoplay muted loop class="video-background" poster="./img/platformsfondo.jpg">
         <source
           src="./video/93_Radar_screen_2_tone_background.mp4"
           type="video/mp4"
