--- a/src/coming-soon.html
+++ b/src/coming-soon.html
@@ -68,7 +68,7 @@
           </form>
         </aside>
       </main>
-      <video autoplay muted loop class="video-background" poster="./img/platformsfondo.jpg">
+      <video autoplay muted loop class="video-background" poster="./img/platforms/fondo.jpg">
         <source
           src="./video/93_Radar_screen_2_tone_background.mp4"
           type="video/mp4"
